--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   },
   "devDependencies": {
     "@jest/globals": "^29.7.0",
+    "cypress": "^13.5.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1"
   }
