--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "devDependencies": {
     "@jest/globals": "^29.7.0",
     "cypress": "^13.5.0",
+    "gh-pages": "^6.1.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1"
   }
