--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "eslint-config-next": "13.5.2",
     "lucide-react": "^0.279.0",
     "next": "^14.0.3",
-    "postcss": "8.4.30",
+    "postcss": "^8.4.32",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.47.0",
@@ -37,6 +37,9 @@
   },
   "devDependencies": {
     "@jest/globals": "^29.7.0",
+    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/react": "^14.1.2",
+    "@testing-library/user-event": "^14.5.1",
     "cypress": "^13.5.0",
     "jest": "^29.7.0",
     "ts-jest": "^29.1.1"
