--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@types/node": "20.6.3",
-    "@types/react": "18.2.22",
+    "@types/react": "^18.2.45",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.16",
     "class-variance-authority": "^0.7.0",
@@ -31,7 +31,6 @@
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "5.2.2",
     "zi-user": "^1.0.1",
     "zod": "^3.22.4"
   },
@@ -42,6 +41,9 @@
     "@testing-library/user-event": "^14.5.1",
     "cypress": "^13.5.0",
     "jest": "^29.7.0",
-    "ts-jest": "^29.1.1"
+    "jest-environment-jsdom": "^29.7.0",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   }
 }
